# aceton

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  aceton.toml  docker-compose.yaml  otel-collector.yaml  prometheus.yml  rust-toolchain.toml  tempo.yaml
crates/aceton/: Cargo.toml
crates/aceton/src/: config.rs  lib.rs
crates/arbitrage/: Cargo.toml
crates/arbitrage/src/: arbitrager.rs  asset.rs  config.rs  dex.rs  graph.rs  graph_old.rs  lib.rs  pool.rs  swap_path.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  metrics.rs
crates/core/: Cargo.toml
crates/core/src/: adapters.rs  asset.rs  contract.rs  dex.rs  lib.rs  pool.rs  swap_path.rs  wallet.rs
crates/dedust/: Cargo.toml
crates/dedust/src/: api.rs  asset.rs  dex.rs  factory.rs  lib.rs  pool.rs
crates/dedust/src/vault/: jetton.rs  mod.rs  native.rs
crates/graph/: Cargo.toml
crates/graph-utils/: Cargo.toml
crates/graph-utils/src/: cycles.rs
crates/graph/src/: cycles.rs  lib.rs
crates/ton-utils/: Cargo.toml
crates/ton-utils/src/: adapters.rs  contract.rs  lib.rs  wallet.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  num.rs
grafana/: grafana.ini
grafana/dashboards/: aceton.json
grafana/dashboards-provisioning/: dashboards.yaml
grafana/datasources/: datasource.yaml
research/: graph.csv  main.ipynb  pools.graph  prototype.ipynb  raw_graph.csv
research/amount_out/: formula.ipynb  optimal_volume.ipynb
research/graph_vis/: data.py  dedust.ipynb  find_paths.py  graph.py  graph_metadata.csv  pools.csv  tokens.csv
research/risk_metrics/: main.ipynb
src/: config.rs  lib.rs  main.rs
src/app/: app.rs  arbitrage.rs  config.rs  mod.rs
src/dex/: mod.rs
src/dex/dedust/: asset.rs  factory.rs  mod.rs  pool.rs  swap.rs
src/dex/dedust/vault/: jetton.rs  mod.rs  native.rs
src/dex/stonfi/: mod.rs  pool.rs  proxy_ton.rs  router.rs
src/utils/: address.rs  gas.rs  metrics.rs  mod.rs
src/utils/tlb/: deserialize.rs  mod.rs  serialize.rs
