[workspace]
resolver = "2"
members = ["./crates/*"]
default-members = ["./crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
aceton.path = "./crates/aceton"
aceton-arbitrage.path = "./crates/arbitrage"
aceton-cli.path = "./crates/cli"
aceton-core.path = "./crates/core"
aceton-dedust.path = "./crates/dedust"
aceton-graph.path = "./crates/graph"
aceton-utils.path = "./crates/utils"

anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
bitvec = "1"
chrono = "0.4"
futures = "0.3"
hex-literal = "0.4"
impl-tools = "0.10"
itertools = "0.12"
lazy_static = "1"
num = "0.4"
petgraph = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
serde_with = "3.8"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tlb = "0.2.13"
tlb-ton = { version = "0.2.13", features = ["serde"] }
ton-contracts = "0.2.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5"

[workspace.dependencies.tonlibjson-client]
git = "https://github.com/getgems-io/ton-grpc.git"
features = ["testnet"]

[workspace.dependencies.tonlibjson-sys]
git = "https://github.com/getgems-io/ton-grpc.git"
features = ["testnet"]
