[package]
name = "aceton"
version.workspace = true
edition.workspace = true

[dependencies]
aceton-arbitrage.workspace = true
aceton-dedust.workspace = true

anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
tonlibjson-client.workspace = true
tracing.workspace = true
url.workspace = true