[package]
name = "aceton-arbitrage"
version.workspace = true
edition.workspace = true

[dependencies]
aceton-core.workspace = true
aceton-graph.workspace = true

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
impl-tools.workspace = true
itertools.workspace = true
num.workspace = true
petgraph.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
tlb-ton.workspace = true
tonlibjson-client.workspace = true
tonlibjson-sys.workspace = true
ton-contracts.workspace = true
tracing.workspace = true
url.workspace = true
