[package]
name = "aceton-arbitrage"
version.workspace = true
edition.workspace = true

[dependencies]
aceton-core.workspace = true
aceton-graph.workspace = true
aceton-utils.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
impl-tools.workspace = true
itertools.workspace = true
lazy_static.workspace = true
num.workspace = true
petgraph.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
tlb.workspace = true
tlb-ton.workspace = true
tokio.workspace = true
tonlibjson-client.workspace = true
tonlibjson-sys.workspace = true
ton-contracts.workspace = true
tracing.workspace = true
url.workspace = true
