[package]
name = "aceton-core"
version.workspace = true
edition.workspace = true

[dependencies]
aceton-ton-utils.workspace = true

anyhow.workspace = true
async-trait.workspace = true
impl-tools.workspace = true
itertools.workspace = true
num.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tlb.workspace = true
tlb-ton.workspace = true
tonlibjson-client.workspace = true
url.workspace = true
