[package]
name = "aceton-dedust"
version.workspace = true
edition.workspace = true

[dependencies]
aceton-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
num-bigint.workspace = true
tlb.workspace = true
tlb-ton.workspace = true
tonlibjson-client.workspace = true