[package]
name = "aceton-dedust"
version.workspace = true
edition.workspace = true

[dependencies]
aceton-core.workspace = true
aceton-arbitrage.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
fraction.workspace = true
hex-literal.workspace = true
impl-tools.workspace = true
num-bigint.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
tlb.workspace = true
tlb-ton.workspace = true
tonlibjson-client.workspace = true
url.workspace = true
