[package]
name = "aceton-dedust"
version.workspace = true
edition.workspace = true

[dependencies]
aceton-core.workspace = true
aceton-arbitrage.workspace = true
aceton-utils.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
hex-literal.workspace = true
impl-tools.workspace = true
num.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
tlb.workspace = true
tlb-ton.workspace = true
tracing.workspace = true
tonlibjson-client.workspace = true
url.workspace = true
