[package]
name = "aceton-ton-utils"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
impl-tools.workspace = true
thiserror.workspace = true
tlb.workspace = true
tlb-ton.workspace = true
tonlibjson-client.workspace = true
